# Kawari

./: .gitignore  Cargo.toml  README.md
.kimi-code/: mcp.json
core/macro/src/: lib.rs
core/src/common/: game.rs
core/src/ipc/zone/: online_status.rs
core/src/packet/: scrambler.rs
resources/data/: opcodes.yml
resources/scripts/: Global.lua
resources/scripts/actions/000/: HeavyShot_00097.lua
resources/scripts/actions/001/: AeroII_00132.lua  Aero_00121.lua  AetherialManipulation_00155.lua  Benediction_00140.lua  BlizzardIII_00154.lua  CureIII_00131.lua  CureII_00135.lua  FireIII_00152.lua  FireII_00147.lua  Fire_00141.lua  Flare_00162.lua  Freeze_00159.lua  Holy_00139.lua  Manafont_00158.lua  Manaward_00157.lua  MedicaII_00133.lua  Medica_00124.lua  PresenceOfMind_00136.lua  Raise_00125.lua  Scathe_00156.lua  StoneII_00127.lua  ThunderIII_00153.lua  Thunder_00144.lua  Transpose_00149.lua
resources/scripts/actions/003/: BlizzardIV_03576.lua  FireIV_03577.lua  LeyLines_03573.lua
resources/scripts/actions/016/: Regen_00137.lua
resources/scripts/actions/025/: Sleep_25880.lua
resources/scripts/actions/035/: Assize_03571.lua  Asylum_03569.lua  Tetragrammaton_03570.lua
resources/scripts/actions/074/: BetweenTheLines_07419.lua  DivineBenison_07432.lua  EnkindleBahamut_007429.lua  Foul_07422.lua  (+6 more)
resources/scripts/commands/: Commands.lua
servers/lobby/src/: connection.rs  main.rs
servers/world/src/: chat_connection.rs  common.rs  custom_ipc_connection.rs  gamedata.rs  main.rs
tools/actionaudit/: Cargo.toml
tools/actionaudit/src/: main.rs
(+102 files in other folders)
