[package]
name = "kawari-actionaudit"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
icarus = { workspace = true }
kawari = { path = "../../core" }
physis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
